--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </head>
 <body>
     <header>
-        <img src="IMG_me.jpg" alt="My Profile Picture">
+        <img src="Messenger_creation_D2296C35-52B5-4F1D-B007-A1CFC0AF9DA7.jpeg" alt="My Profile Picture">
         <h1>John Paul Duman-ag</h1>
         <p>Camanga tukuran ZDS</p>
         <p>09631256915</p>
